# YOLOv5-LibTorch

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: YOLOv5LibTorch.cpp
